Forgot to add before_install for osx script

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,9 @@ matrix:
           language: generic
           env: TOXENV=3.6.2
 
+before_install:
+  - ./travis/osx-setup.sh
+
 install:
   - pip install -r dependencies.txt
 
