before_install location was wrong

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
           env: TOXENV=3.6.2
 
 before_install:
-  - ./travis/osx-setup.sh
+  - ./.travis/osx-setup.sh
 
 install:
   - pip install -r dependencies.txt
