Attempt #3 at getting the path right

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,8 @@ before_install:
   - ./.travis/osx-setup.sh
 
 install:
-  - export PYTHONPATH=$PYTHONPATH:$(pwd)/Git-Issue/git_issue
   - pip install -r dependencies.txt
 
-script: python -m pytest
+script: 
+  - cd /Git-Issue
+  - python -m pytest
