Added front-end caching to reduce the time it takes between operations for issues we've already accessed in some manner.

--- a/angular_frontend/angular_frontend.csproj
+++ b/angular_frontend/angular_frontend.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Compile Remove="C:\Users\Liam\.nuget\packages\afomindotcom.ngprojecttemplate.server\1.0.5\build\..\tools\AspNetToNgRedirector.cs" />
+    <!--<Compile Remove="C:\Users\Liam\.nuget\packages\afomindotcom.ngprojecttemplate.server\1.0.5\build\..\tools\AspNetToNgRedirector.cs" />-->
   </ItemGroup>
 
   <ItemGroup>
