Fixing test runner. Having both test files run with the same command caused issues.

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,4 +21,5 @@ install:
 
 script: 
   - cd Git-Issue
-  - python -m pytest
+  - pytest "tests\test_issue_handler.py"
+  - pytest "tests\test_merge_utils.py"
